updating join waitlist link

--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@ Our <b>Winter Session</b> begins January 17, 2026 and ends on <b>February 28, 20
                   How do I make a payment for the program?
                 </div>
                 <div class="faq-answer">
-                  You'll first need to <b><a href="https://forms.gle/kJrAhTuWxogALkiJ6" target="_blank">join the waitlist</a> </b>for the program and then we'll email you with a confirmation and next steps for making your payment through an e-Transfer.
+                  You'll first need to <b><a href="https://countykidsclub.youthmodo.com/register?programId=adb809d8-8a42-4e25-81a2-5ebad98bc6c0" target="_blank">join the waitlist</a> </b>for the program and then we'll email you with a confirmation and next steps for making your payment through an e-Transfer.
                 </div>
               </div>
               <div class="faq-item">
