--- a/index.html
+++ b/index.html
@@ -843,6 +843,9 @@ We’ll let you know if a space opens up or if a new session is added.
               <a href="https://countykidsclub.youthmodo.com/volunteer/adb809d8-8a42-4e25-81a2-5ebad98bc6c0" target="_blank">
                 <button class="btn-outline">Volunteer</button>
               </a>
+              <a href="https://countykidsclub.youthmodo.com/waiver?programId=adb809d8-8a42-4e25-81a2-5ebad98bc6c0" target="_blank">
+                <button class="btn-outline">Sign Waiver</button>
+              </a>
               <!--<a href="#about">
                 <button class="btn-outline">See schedule &amp; cost</button>
               </a>-->
