changing structure of site to handle multiple programs

--- a/index.html
+++ b/index.html
@@ -946,28 +946,25 @@
 
             </p>
             <br>
-            <p class="hero-text">All spots for County Kids Club are currently filled — but you can still join the
-              waitlist!
-              We’ll let you know if a space opens up or if a new session is added.
+            <p class="hero-text">Join us for one of our upcoming programs, or help us make them happen by volunteering!
+              We use <a href="https://youthmodo.com/" target="_blank" style="text-decoration: underline;">YouthModo</a>
+              to safely manage registrations.
             </p>
             <div class="hero-cta-group">
-              <a href="https://countykidsclub.youthmodo.com/register?programId=adb809d8-8a42-4e25-81a2-5ebad98bc6c0"
-                target="_blank">
+              <a href="https://countykidsclub.youthmodo.com/register" target="_blank">
                 <button class="btn-primary">
-                  Join the waitlist <span>→</span>
+                  Register <span>→</span>
                 </button>
               </a>
-              <a href="https://countykidsclub.youthmodo.com/volunteer/adb809d8-8a42-4e25-81a2-5ebad98bc6c0"
-                target="_blank">
+              <a href="#programs">
+                <button class="btn-outline">View Programs</button>
+              </a>
+              <a href="https://countykidsclub.youthmodo.com/volunteer" target="_blank">
                 <button class="btn-outline">Volunteer</button>
               </a>
-              <a href="https://countykidsclub.youthmodo.com/waiver?programId=adb809d8-8a42-4e25-81a2-5ebad98bc6c0"
-                target="_blank">
+              <a href="https://countykidsclub.youthmodo.com/waiver" target="_blank">
                 <button class="btn-outline">Sign Waiver</button>
               </a>
-              <!--<a href="#about">
-                <button class="btn-outline">See schedule &amp; cost</button>
-              </a>-->
             </div>
           </div>
 
@@ -976,32 +973,46 @@
 
     </section>
 
-    <!-- ABOUT / PROGRAM DETAILS -->
+    <!-- ABOUT -->
     <section class="section-about" id="about">
       <div class="container">
         <div class="about-title">
           <h2 class="section-title">What to Expect</h2>
         </div>
-        <div class="about-grid">
-          <div>
-            <p class="about-text">
-              Each week, kids explore playful games, mini challenges, and imaginative movement circuits that build
-              balance, strength, and coordination — all disguised as fun!
-            </p>
-            <br>
-            <p class="about-text">
-              We focus on the basics — running, jumping, crawling, throwing — and mix them into obstacle courses, team
-              games, and creative movement adventures.
-              No sports experience needed — just a smile and a willingness to move!
-            </p>
-          </div>
+        <div style="max-width: 800px; margin: 0 auto; text-align: center;">
+          <p class="about-text" style="max-width: 100%;">
+            Each week, kids explore playful games, mini challenges, and imaginative movement circuits that build
+            balance, strength, and coordination — all disguised as fun!
+          </p>
+          <br>
+          <p class="about-text" style="max-width: 100%;">
+            We focus on the basics — running, jumping, crawling, throwing — and mix them into obstacle courses, team
+            games, and creative movement adventures.
+            No sports experience needed — just a smile and a willingness to move!
+          </p>
+        </div>
+      </div>
+    </section>
 
-          <div class="schedule-card">
-            <h3 class="schedule-title">Program details</h3>
+    <!-- PROGRAMS -->
+    <section class="section-about" id="programs"
+      style="background: var(--bg-cream); padding-top: 4rem; padding-bottom: 4rem;">
+      <div class="container">
+        <div class="about-title">
+          <h2 class="section-title">Our Programs</h2>
+          <p class="section-subtitle">
+            Current, upcoming, and past programs organized by County Kids Club.
+          </p>
+        </div>
+
+        <h3 style="margin-bottom: 1.5rem; font-size: 1.4rem;">Current &amp; Upcoming Programs</h3>
+        <div style="margin-bottom: 3rem;">
+          <div class="schedule-card" style="max-width: 800px;">
+            <h3 class="schedule-title">Winter 2026 Session</h3>
 
             <div class="schedule-row">
               <div class="schedule-label">Ages</div>
-              <div>3-6 <br>Note: for some activities, groups might be split out (3-4 & 5-6)</div>
+              <div>3-6 <br>Note: for some activities, groups might be split out (3-4 &amp; 5-6)</div>
             </div>
             <div class="schedule-row">
               <div class="schedule-label">Schedule</div>
@@ -1037,16 +1048,29 @@
               </div>
             </div>
             <div class="schedule-row">
-              <div class="schedule-label">Note</div>
+              <div class="schedule-label">Status</div>
               <div>
-                A parent or guardian is required to stay for the duration of each class. See our <a href="#faq">FAQ</a>
-                for more information.
+                <b>All spots are currently filled.</b> You can <a
+                  href="https://countykidsclub.youthmodo.com/register?programId=adb809d8-8a42-4e25-81a2-5ebad98bc6c0"
+                  target="_blank" style="color: var(--text-main); text-decoration: underline;">join the waitlist</a> in
+                case a spot opens up.
 
               </div>
             </div>
 
           </div>
         </div>
+
+        <h3 style="margin-bottom: 1.5rem; font-size: 1.4rem;">Past Programs</h3>
+        <div>
+          <div class="schedule-card"
+            style="background: #ffffff; border: 1px solid #e5e7eb; box-shadow: none; max-width: 800px;">
+            <div style="color: var(--text-muted); font-size: 0.95rem;">
+              <em>Details of our past programs will appear here.</em>
+            </div>
+          </div>
+        </div>
+
       </div>
     </section>
 
@@ -1176,12 +1200,11 @@
             <div class="faq-list">
               <div class="faq-item">
                 <div class="faq-question">
-                  Where is this located?
+                  Where are programs located?
                 </div>
                 <div class="faq-answer">
-                  County Kids Club is held in <b>Picton, Prince Edward County, Canada</b>. Classes take place in GYM A
-                  at <a href="https://maps.app.goo.gl/65hrq1qq69AC6shc7" target="_blank"><b>Prince Edward Collegiate
-                      Institute (PECI)</b> — 41 Barker Street, Picton, ON.</a>
+                  Locations vary by program. Most of our programming takes place in <b>Prince Edward County</b> (e.g.,
+                  at PECI in Picton). Please check the details for each specific program above.
                 </div>
               </div>
               <div class="faq-item">
@@ -1189,8 +1212,8 @@
                   How many kids will be in the program?
                 </div>
                 <div class="faq-answer">
-                  We’re keeping groups small — <b>a maximum of 24 kids total (12 per group: ages 3–4 and 5–6)</b> — so
-                  every child gets plenty of attention, encouragement, and room to move and play.
+                  We try to keep groups relatively small so every child gets plenty of attention, encouragement, and
+                  room to move. Specific group sizes and splits vary by program.
                 </div>
               </div>
               <div class="faq-item">
@@ -1198,15 +1221,9 @@
                   What is the age range?
                 </div>
                 <div class="faq-answer">
-                  The program is open to children <b>ages 3–6</b>. Some activities might require the kids to be split
-                  into two groups:
-
-                  <ul class="faq-list-bullets">
-                    <li>3–4 years</li>
-                    <li>5–6 years</li>
-                  </ul>
-                  <br>
-                  <p>This helps us tailor activities to each age group’s energy, coordination, and confidence level.</p>
+                  Age ranges vary by program, though we primarily cater to young children (e.g., <b>ages 3–6</b>) for
+                  movement fundamentals. We often split kids into smaller groups by age (e.g., 3–4 years and 5–6 years)
+                  to tailor the activities.
                 </div>
               </div>
               <div class="faq-item">
@@ -1214,8 +1231,9 @@
                   What is the cost?
                 </div>
                 <div class="faq-answer">
-                  <b>It’s $45 per child</b> for a <b>6-week session</b> — an affordable way to get kids moving,
-                  learning, and having fun every week!
+                  Program costs vary based on the duration, type of program, and location. We strive to keep our
+                  programs as affordable as possible, and all prices will be clearly listed in the <a
+                    href="#programs">Our Programs</a> section.
                 </div>
               </div>
               <div class="faq-item">
@@ -1223,9 +1241,8 @@
                   What is the schedule?
                 </div>
                 <div class="faq-answer">
-                  Classes run on <b>Saturdays from 9:30–10:30 AM.</b>
-                  Our <b>Winter Session</b> begins January 17, 2026 and ends on <b>February 28, 2026</b>. Please note
-                  there will be no session on Family Day Weekend (February 14).
+                  Schedules depend entirely on the specific program. Please visit the <a href="#programs">Our
+                    Programs</a> section for dates and times.
                 </div>
               </div>
               <div class="faq-item">
@@ -1292,10 +1309,11 @@
                   How do I make a payment for the program?
                 </div>
                 <div class="faq-answer">
-                  You'll first need to <b><a
-                      href="https://countykidsclub.youthmodo.com/register?programId=adb809d8-8a42-4e25-81a2-5ebad98bc6c0"
-                      target="_blank">join the waitlist</a> </b>for the program and then we'll email you with a
-                  confirmation and next steps for making your payment through an e-Transfer.
+                  We use <a href="https://youthmodo.com" target="_blank"
+                    style="text-decoration: underline">YouthModo</a> for our registrations. By visiting the <b><a
+                      href="https://countykidsclub.youthmodo.com/register" target="_blank">Registration portal</a></b>,
+                  you can sign up for specific programs or waitlists. Payment details are provided during the
+                  registration process.
                 </div>
               </div>
               <div class="faq-item">
