adding mailing list links

--- a/index.html
+++ b/index.html
@@ -959,12 +959,6 @@
               <a href="#programs">
                 <button class="btn-outline">View Programs</button>
               </a>
-              <a href="https://countykidsclub.youthmodo.com/volunteer" target="_blank">
-                <button class="btn-outline">Volunteer</button>
-              </a>
-              <a href="https://countykidsclub.youthmodo.com/waiver" target="_blank">
-                <button class="btn-outline">Sign Waiver</button>
-              </a>
             </div>
           </div>
 
@@ -996,18 +990,18 @@
 
     <!-- PROGRAMS -->
     <section class="section-about" id="programs"
-      style="background: var(--bg-cream); padding-top: 4rem; padding-bottom: 4rem;">
+      style="background: var(--bg-cyan); padding-top: 4rem; padding-bottom: 4rem;">
       <div class="container">
         <div class="about-title">
           <h2 class="section-title">Our Programs</h2>
-          <p class="section-subtitle">
+          <p class="section-subtitle" style="color: #111827;">
             Current, upcoming, and past programs organized by County Kids Club.
           </p>
         </div>
 
         <h3 style="margin-bottom: 1.5rem; font-size: 1.4rem;">Current &amp; Upcoming Programs</h3>
         <div style="margin-bottom: 3rem;">
-          <div class="schedule-card" style="max-width: 800px;">
+          <div class="schedule-card" style="width: 100%;">
             <h3 class="schedule-title">Winter 2026 Session</h3>
 
             <div class="schedule-row">
@@ -1061,13 +1055,45 @@
           </div>
         </div>
 
+        <div style="margin-bottom: 3rem; margin-top: 1rem;">
+          <div class="schedule-card"
+            style="width: 100%; background: var(--bg-lime); text-align: center; padding: 2.5rem 1.5rem;">
+            <h3 style="font-size: 1.4rem; margin-bottom: 0.5rem; color: var(--text-main);">Want to be notified about our
+              next session?</h3>
+            <p style="margin-bottom: 1.5rem; font-size: 0.95rem; color: var(--text-main);">Join our mailing list and be
+              the first to know when new programs launch.</p>
+            <a href="https://countykidsclub.youthmodo.com/mailing-list?list=06232d50-2b18-40d9-9c75-bbaf16a455c7"
+              target="_blank">
+              <button class="btn-primary"
+                style="background: #111827; color: #ffffff; border: 2px solid #111827; transition: transform 0.2s;">
+                Join the Mailing List <span style="margin-left: 0.5rem;">→</span>
+              </button>
+            </a>
+          </div>
+        </div>
+
         <h3 style="margin-bottom: 1.5rem; font-size: 1.4rem;">Past Programs</h3>
         <div>
           <div class="schedule-card"
-            style="background: #ffffff; border: 1px solid #e5e7eb; box-shadow: none; max-width: 800px;">
+            style="background: #ffffff; border: 1px solid #e5e7eb; box-shadow: none; width: 100%;">
             <div style="color: var(--text-muted); font-size: 0.95rem;">
               <em>Details of our past programs will appear here.</em>
             </div>
+          </div>
+        </div>
+
+        <div
+          style="margin-top: 3.5rem; text-align: center; background: #ffffff; border-radius: 24px; padding: 2.5rem 1.5rem; box-shadow: var(--shadow-soft); width: 100%;">
+          <h3 style="font-size: 1.4rem; margin-bottom: 0.6rem; color: var(--text-main);">Get Involved</h3>
+          <p style="margin-bottom: 1.5rem; font-size: 0.95rem; color: var(--text-muted);">Want to lend a helping hand or
+            need to sign your waiver before class?</p>
+          <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+            <a href="https://countykidsclub.youthmodo.com/volunteer" target="_blank">
+              <button class="btn-primary">Volunteer</button>
+            </a>
+            <a href="https://countykidsclub.youthmodo.com/waiver" target="_blank">
+              <button class="btn-outline">Sign Waiver</button>
+            </a>
           </div>
         </div>
 
