changing some text

--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
         <h3 style="margin-bottom: 1.5rem; font-size: 1.4rem;">Current &amp; Upcoming Programs</h3>
         <div style="margin-bottom: 3rem;">
           <div class="schedule-card" style="width: 100%;">
-            <h3 class="schedule-title">Winter 2026 Session</h3>
+            <h3 class="schedule-title">Winter 2026 Program</h3>
 
             <div class="schedule-row">
               <div class="schedule-label">Ages</div>
@@ -1030,7 +1030,7 @@
             <div class="schedule-row">
               <div class="schedule-label">Cost</div>
               <div>
-                $45 per child / 6-week session<br>
+                $45 per child / 6-week program<br>
 
               </div>
             </div>
@@ -1059,7 +1059,7 @@
           <div class="schedule-card"
             style="width: 100%; background: var(--bg-lime); text-align: center; padding: 2.5rem 1.5rem;">
             <h3 style="font-size: 1.4rem; margin-bottom: 0.5rem; color: var(--text-main);">Want to be notified about our
-              next session?</h3>
+              next program?</h3>
             <p style="margin-bottom: 1.5rem; font-size: 0.95rem; color: var(--text-main);">Join our mailing list and be
               the first to know when new programs launch.</p>
             <a href="https://countykidsclub.youthmodo.com/mailing-list?list=06232d50-2b18-40d9-9c75-bbaf16a455c7"
