updating landing page with new program information

--- a/index.html
+++ b/index.html
@@ -926,177 +926,46 @@
     <!-- HERO -->
     <section class="hero">
       <div class="container">
-        <div class="hero-inner">
-          <div>
-            <center><img src="images/ckc-colored-logo.png" alt="County Kids Club">
-              <img src="images/County.png" alt="County Kids Club">
-            </center>
-          </div>
-          <div>
+        <div class="hero-inner" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+          <div style="display: flex; flex-direction: column; align-items: center;">
+
+            <img src="images/ckc-colored-logo.png" alt="County Kids Club" style="margin: 0 auto;">
+
+
             <h1 class="hero-heading">
               A movement club for kids<br>
               <span>powered by fun and community.</span>
             </h1>
-            <p class="hero-text">
+            <p class="hero-text" style="max-width: 600px; margin: 0 auto;">
               County Kids Club is a fitness and movement program in Prince Edward County where kids jump, run, climb,
               and play their way to confidence and lifelong healthy habits.
             </p><br>
-            <p class="hero-text">Each class blends fun, energy, and skill-building—helping kids discover the joy of
-              movement while developing coordination, strength, and self-belief.
+            <p class="hero-text" style="max-width: 600px; margin: 0 auto;">Each class blends fun, energy, and
+              skill-building to help kids discover the joy of
+              movement while building coordination, strength, and self-belief.
 
             </p>
             <br>
-            <p class="hero-text">Join us for one of our upcoming programs, or help us make them happen by volunteering!
-              We use <a href="https://youthmodo.com/" target="_blank" style="text-decoration: underline;">YouthModo</a>
-              to safely manage registrations.
+            <p class="hero-text" style="max-width: 600px; margin: 0 auto;">Join us for an upcoming program or get
+              involved by volunteering and helping make it
+              happen.
+
             </p>
-            <div class="hero-cta-group">
-              <a href="https://countykidsclub.youthmodo.com/register" target="_blank">
+            <div class="hero-cta-group" style="justify-content: center;">
+              <a href="https://countykidsclub.youthmodo.com/mailing-list?list=06232d50-2b18-40d9-9c75-bbaf16a455c7"
+                target="_blank">
                 <button class="btn-primary">
-                  Register <span>→</span>
+                  Join the Mailing List
                 </button>
               </a>
-              <a href="#programs">
-                <button class="btn-outline">View Programs</button>
+              <a href="https://countykidsclub.youthmodo.com/volunteer" target="_blank">
+                <button class="btn-outline">
+                  Volunteer
+                </button>
               </a>
             </div>
           </div>
-
-
-
-
-    </section>
-
-    <!-- ABOUT -->
-    <section class="section-about" id="about">
-      <div class="container">
-        <div class="about-title">
-          <h2 class="section-title">What to Expect</h2>
         </div>
-        <div style="max-width: 800px; margin: 0 auto; text-align: center;">
-          <p class="about-text" style="max-width: 100%;">
-            Each week, kids explore playful games, mini challenges, and imaginative movement circuits that build
-            balance, strength, and coordination — all disguised as fun!
-          </p>
-          <br>
-          <p class="about-text" style="max-width: 100%;">
-            We focus on the basics — running, jumping, crawling, throwing — and mix them into obstacle courses, team
-            games, and creative movement adventures.
-            No sports experience needed — just a smile and a willingness to move!
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- PROGRAMS -->
-    <section class="section-about" id="programs"
-      style="background: var(--bg-cyan); padding-top: 4rem; padding-bottom: 4rem;">
-      <div class="container">
-        <div class="about-title">
-          <h2 class="section-title">Our Programs</h2>
-          <p class="section-subtitle" style="color: #111827;">
-            Current, upcoming, and past programs organized by County Kids Club.
-          </p>
-        </div>
-
-        <h3 style="margin-bottom: 1.5rem; font-size: 1.4rem;">Current &amp; Upcoming Programs</h3>
-        <div style="margin-bottom: 3rem;">
-          <div class="schedule-card" style="width: 100%;">
-            <h3 class="schedule-title">Winter 2026 Program</h3>
-
-            <div class="schedule-row">
-              <div class="schedule-label">Ages</div>
-              <div>3-6 <br>Note: for some activities, groups might be split out (3-4 &amp; 5-6)</div>
-            </div>
-            <div class="schedule-row">
-              <div class="schedule-label">Schedule</div>
-              <div>6-week program<br>
-                Saturdays 9:30-10:30 AM<br>
-                Starting January 17, 2026
-              </div>
-            </div>
-            <div class="schedule-row">
-              <div class="schedule-label">Location</div>
-              <div>
-                <a href="https://maps.app.goo.gl/65hrq1qq69AC6shc7" target="_blank">Prince Edward Collegiate Institute
-                  (PECI)<br>
-                  GYM A<br>
-                  41 Barker Street<br>
-                  Picton, ON<br>
-                  K0K 2T0</a><br>
-
-              </div>
-            </div>
-            <div class="schedule-row">
-              <div class="schedule-label">Cost</div>
-              <div>
-                $45 per child / 6-week program<br>
-
-              </div>
-            </div>
-            <div class="schedule-row">
-              <div class="schedule-label">What to bring</div>
-              <div>
-                Indoor running shoes, comfy clothes, and a water bottle.
-
-              </div>
-            </div>
-            <div class="schedule-row">
-              <div class="schedule-label">Status</div>
-              <div>
-                <b>All spots are currently filled.</b> You can <a
-                  href="https://countykidsclub.youthmodo.com/register?programId=adb809d8-8a42-4e25-81a2-5ebad98bc6c0"
-                  target="_blank" style="color: var(--text-main); text-decoration: underline;">join the waitlist</a> in
-                case a spot opens up.
-
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-        <div style="margin-bottom: 3rem; margin-top: 1rem;">
-          <div class="schedule-card"
-            style="width: 100%; background: var(--bg-lime); text-align: center; padding: 2.5rem 1.5rem;">
-            <h3 style="font-size: 1.4rem; margin-bottom: 0.5rem; color: var(--text-main);">Want to be notified about our
-              next program?</h3>
-            <p style="margin-bottom: 1.5rem; font-size: 0.95rem; color: var(--text-main);">Join our mailing list and be
-              the first to know when new programs launch.</p>
-            <a href="https://countykidsclub.youthmodo.com/mailing-list?list=06232d50-2b18-40d9-9c75-bbaf16a455c7"
-              target="_blank">
-              <button class="btn-primary"
-                style="background: #111827; color: #ffffff; border: 2px solid #111827; transition: transform 0.2s;">
-                Join the Mailing List <span style="margin-left: 0.5rem;">→</span>
-              </button>
-            </a>
-          </div>
-        </div>
-
-        <h3 style="margin-bottom: 1.5rem; font-size: 1.4rem;">Past Programs</h3>
-        <div>
-          <div class="schedule-card"
-            style="background: #ffffff; border: 1px solid #e5e7eb; box-shadow: none; width: 100%;">
-            <div style="color: var(--text-muted); font-size: 0.95rem;">
-              <em>Details of our past programs will appear here.</em>
-            </div>
-          </div>
-        </div>
-
-        <div
-          style="margin-top: 3.5rem; text-align: center; background: #ffffff; border-radius: 24px; padding: 2.5rem 1.5rem; box-shadow: var(--shadow-soft); width: 100%;">
-          <h3 style="font-size: 1.4rem; margin-bottom: 0.6rem; color: var(--text-main);">Get Involved</h3>
-          <p style="margin-bottom: 1.5rem; font-size: 0.95rem; color: var(--text-muted);">Want to lend a helping hand or
-            need to sign your waiver before class?</p>
-          <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
-            <a href="https://countykidsclub.youthmodo.com/volunteer" target="_blank">
-              <button class="btn-primary">Volunteer</button>
-            </a>
-            <a href="https://countykidsclub.youthmodo.com/waiver" target="_blank">
-              <button class="btn-outline">Sign Waiver</button>
-            </a>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -1143,6 +1012,173 @@
       </div>
     </section>
 
+    <!-- PROGRAMS -->
+    <section class="section-about" id="programs"
+      style="background: var(--bg-cyan); padding-top: 4rem; padding-bottom: 4rem;">
+      <div class="container">
+        <div class="about-title">
+          <h2 class="section-title">Our Programs</h2>
+          <p class="section-subtitle" style="color: #111827;">
+            Current, upcoming, and past programs organized by County Kids Club.
+          </p>
+        </div>
+
+        <h3 style="margin-bottom: 1.5rem; font-size: 1.4rem;">Current &amp; Upcoming Programs</h3>
+        <div
+          style="margin-bottom: 3rem; display: grid; gap: 1.5rem; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
+          <div class="schedule-card" style="width: 100%; background: #ffffff;">
+            <h3 class="schedule-title">Spring 2026 Movement Program - Junior Movers</h3>
+
+            <div class="schedule-row">
+              <div class="schedule-label">Ages</div>
+              <div>3-4 years</div>
+            </div>
+            <div class="schedule-row">
+              <div class="schedule-label">Capacity</div>
+              <div>15 spots</div>
+            </div>
+            <div class="schedule-row">
+              <div class="schedule-label">Schedule</div>
+              <div>4-week program<br>
+                Saturdays 9:30-10:15 AM (45 minutes)<br>
+                March 28, 2026<br>
+                April 11, 2026<br>
+                April 18, 2026<br>
+                April 25, 2026
+
+              </div>
+            </div>
+            <div class="schedule-row">
+              <div class="schedule-label">Location</div>
+              <div>
+                <a href="https://maps.app.goo.gl/65hrq1qq69AC6shc7" target="_blank">Prince Edward Collegiate Institute
+                  (PECI)<br>
+                  GYM A<br>
+                  41 Barker Street<br>
+                  Picton, ON<br>
+                  K0K 2T0</a><br>
+
+              </div>
+            </div>
+            <div class="schedule-row">
+              <div class="schedule-label">Cost</div>
+              <div>
+                $45 per child / 4-week program<br>
+
+              </div>
+            </div>
+            <div class="schedule-row">
+              <div class="schedule-label">What to bring</div>
+              <div>
+                Indoor running shoes, comfy clothes, and a water bottle.
+
+              </div>
+            </div>
+            <div class="schedule-row">
+              <div class="schedule-label">Status</div>
+              <div>
+                <b>Registration is opening soon.</b> You can <a
+                  href="https://countykidsclub.youthmodo.com/mailing-list?list=06232d50-2b18-40d9-9c75-bbaf16a455c7"
+                  target="_blank" style="color: var(--text-main); text-decoration: underline;">join the mailing list</a>
+                to
+                be notified when registration opens.
+
+              </div>
+            </div>
+
+          </div>
+          <div class="schedule-card" style="width: 100%; background: #ffffff;">
+            <h3 class="schedule-title">Spring 2026 Movement Program - Mega Movers</h3>
+
+            <div class="schedule-row">
+              <div class="schedule-label">Ages</div>
+              <div>5-7 years</div>
+            </div>
+            <div class="schedule-row">
+              <div class="schedule-label">Capacity</div>
+              <div>20 spots</div>
+            </div>
+            <div class="schedule-row">
+              <div class="schedule-label">Schedule</div>
+              <div>4-week program<br>
+                Saturdays 10:30-11:15 AM (45 minutes)<br>
+                March 28, 2026<br>
+                April 11, 2026<br>
+                April 18, 2026<br>
+                April 25, 2026
+
+              </div>
+            </div>
+            <div class="schedule-row">
+              <div class="schedule-label">Location</div>
+              <div>
+                <a href="https://maps.app.goo.gl/65hrq1qq69AC6shc7" target="_blank">Prince Edward Collegiate Institute
+                  (PECI)<br>
+                  GYM A<br>
+                  41 Barker Street<br>
+                  Picton, ON<br>
+                  K0K 2T0</a><br>
+
+              </div>
+            </div>
+            <div class="schedule-row">
+              <div class="schedule-label">Cost</div>
+              <div>
+                $45 per child / 4-week program<br>
+
+              </div>
+            </div>
+            <div class="schedule-row">
+              <div class="schedule-label">What to bring</div>
+              <div>
+                Indoor running shoes, comfy clothes, and a water bottle.
+
+              </div>
+            </div>
+            <div class="schedule-row">
+              <div class="schedule-label">Status</div>
+              <div>
+                <b>Registration is opening soon.</b> You can <a
+                  href="https://countykidsclub.youthmodo.com/mailing-list?list=06232d50-2b18-40d9-9c75-bbaf16a455c7"
+                  target="_blank" style="color: var(--text-main); text-decoration: underline;">join the mailing list</a>
+                to
+                be notified when registration opens.
+
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <div style="margin-bottom: 3rem; margin-top: 1rem;">
+          <div class="schedule-card"
+            style="width: 100%; background: var(--bg-cream); text-align: center; padding: 2.5rem 1.5rem;">
+            <h3 style="font-size: 1.4rem; margin-bottom: 0.5rem; color: var(--text-main);">Want to be notified about our
+              next program?</h3>
+            <p style="margin-bottom: 1.5rem; font-size: 0.95rem; color: var(--text-main);">Join our mailing list and be
+              the first to know when new programs launch.</p>
+            <a href="https://countykidsclub.youthmodo.com/mailing-list?list=06232d50-2b18-40d9-9c75-bbaf16a455c7"
+              target="_blank">
+              <button class="btn-primary"
+                style="background: #111827; color: #ffffff; border: 2px solid #111827; transition: transform 0.2s;">
+                Join the Mailing List
+              </button>
+            </a>
+          </div>
+        </div>
+
+        <h3 style="margin-bottom: 1.5rem; font-size: 1.4rem;">Past Programs</h3>
+        <ul style="color: var(--text-muted); font-size: 0.95rem; line-height: 1.6; margin-left: 2rem;">
+          <li>Winter 2026 Program</li>
+        </ul>
+
+
+
+      </div>
+    </section>
+
+
+
 
 
     <!-- COACHES -->
@@ -1165,7 +1201,7 @@
               <div class="coach-name">Jessica Santos</div>
               <div class="coach-bio">
                 Sports and movement have always brought me joy, connection, and confidence. As a mom to an active
-                almost-3-year-old, I noticed there were few places for young kids to explore movement in a fun,
+                3-year-old, I noticed there were few places for young kids to explore movement in a fun,
                 supportive way. Our community deserves more opportunities like this, and I’m excited to help create
                 them.
               </div>
@@ -1224,53 +1260,6 @@
             </p>
 
             <div class="faq-list">
-              <div class="faq-item">
-                <div class="faq-question">
-                  Where are programs located?
-                </div>
-                <div class="faq-answer">
-                  Locations vary by program. Most of our programming takes place in <b>Prince Edward County</b> (e.g.,
-                  at PECI in Picton). Please check the details for each specific program above.
-                </div>
-              </div>
-              <div class="faq-item">
-                <div class="faq-question">
-                  How many kids will be in the program?
-                </div>
-                <div class="faq-answer">
-                  We try to keep groups relatively small so every child gets plenty of attention, encouragement, and
-                  room to move. Specific group sizes and splits vary by program.
-                </div>
-              </div>
-              <div class="faq-item">
-                <div class="faq-question">
-                  What is the age range?
-                </div>
-                <div class="faq-answer">
-                  Age ranges vary by program, though we primarily cater to young children (e.g., <b>ages 3–6</b>) for
-                  movement fundamentals. We often split kids into smaller groups by age (e.g., 3–4 years and 5–6 years)
-                  to tailor the activities.
-                </div>
-              </div>
-              <div class="faq-item">
-                <div class="faq-question">
-                  What is the cost?
-                </div>
-                <div class="faq-answer">
-                  Program costs vary based on the duration, type of program, and location. We strive to keep our
-                  programs as affordable as possible, and all prices will be clearly listed in the <a
-                    href="#programs">Our Programs</a> section.
-                </div>
-              </div>
-              <div class="faq-item">
-                <div class="faq-question">
-                  What is the schedule?
-                </div>
-                <div class="faq-answer">
-                  Schedules depend entirely on the specific program. Please visit the <a href="#programs">Our
-                    Programs</a> section for dates and times.
-                </div>
-              </div>
               <div class="faq-item">
                 <div class="faq-question">
                   What equipment does my child need?
